--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,9 +27,10 @@
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="iznos" class="form-label">Iznos</label>
-                    <input type="number" step="0.01" id="iznos" class="form-control" required>
-                </div>
+    				<label for="iznos" class="form-label">Iznos</label>
+    				<input type="number" step="0.01" min="0" id="iznos" class="form-control" required>
+				</div>
+
                 <div class="mb-3">
                     <label for="opis" class="form-label">Opis</label>
                     <input type="text" id="opis" class="form-control" required>
